styles/style.test.css
body {
font-family:sans-serif,'iLiHei','LiHei Pro','微軟正黑體','Arial Unicode MS';
padding-top:60px;
overflow:hidden;
}

#breadcrumb div {
display:inline;
}

#imdbBtn {
padding:4px;
float:left;
cursor:pointer;
}

#lPanel,#dropBox {
height:600px;
position:relative;
}

#remarkDesc {
position:absolute;
bottom:0;
font-size:80%;
}

.dropBoxHover {
background-color:#DDF!important;
}

#lPanel,#dropBox {
overflow:auto;
overflow-x:hidden;
padding:5px;
}

#catbox,#groupBox,#titleBox {
z-index:999;
}

li {
cursor:pointer;
}

.tab:hover,li:hover {
background-color:#FFE0B0;
}

.itemSeled,.itemSeled:hover {
background-color:#FCC;
}

h1 {
font-size:120%;
font-weight:700;
line-height:1.2em;
}

.hidden {
display:none;
}

#footer {
font-size:90%;
text-align:right;
}

.clear {
clear:both;
visibility:hidden;
}

.description {
color:#666;
font-size:12pt;
padding:5px 0 2px 0.2em;
}

a {
color:#006;
text-decoration:none;
}

#filter {
font-size:50%;
}

.notMatch {
color:#999999!important;
}

.greyBox {
background-color:#EEE!important;
}

.redBox {
background-color:#FCC!important;
}

.ui-dialog {
padding:5px;
border:1px solid #006;
background-color:#CCF;
}

.ui-dialog-titlebar {
display:none;
}

.ui-dialog-content {
background-color:#EEF;
padding:5px;
}

.ui-dialog-buttonpane {
text-align:right;
padding:8px 0 0 0;
}

button.ui-state-default {
height:30px;
width:80px;
margin:0 4px;
line-height:24px;
}

.ui-widget-overlay {
background-color:#CCC;
opacity:0.5;
position:absolute;
left:0;
top:0;
}

.shareBtn {
font-size:60%;
border:1px solid #900;
padding:2px;
}

#shareLink {
margin:5px 0;
width:100%;
text-align:center;
line-height:2em;
display:block;
border:1px solid #900;
}

.shareBtn:hover,#shareLink:hover {
background-color:#FFCCCC;
}

.shareBtn,.ui-dialog,#shareLink,.ui-dialog-content {
border-radius:10px;
-moz-border-radius:10px;
-webkit-border-radius:10px;
}

